[bdist_wheel]
universal = 1

[metadata]
name = b64dec
version = attr: b64.__version__
description = decode youtube video id into hexadecimal
long_description = file:README.md
license = MIT
author = shidocchi
author_email = shidocchi@gmail.com
url = https://github.com/shidocchi/b64dec
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = b64
